[package]
name = "esp-idf-ble"
version = "0.0.1"
edition = "2021"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
resolver = "2"

[profile.release]
opt-level = "s"
incremental = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
native = ["esp-idf-sys/native"]
default = ["native"]

[dependencies]
esp-idf-sys = { version = "0.33", features = ["binstart", "std", "native"] }
esp-idf-svc = "0.46"
esp-idf-hal = "0.41"
embedded-svc = "0.25"
embedded-hal = "0.2"
lazy_static = "1.4"

log = { version = "0.4" }

[build-dependencies]
embuild = "0.31.2"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
